--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <br>
 <p class="p2"><span class="s1">Hello! I am a rising sophomore at UC Berkeley pursuing a BA in Pure Math.  I'm interested in math -at the moment I'm especially interested in interesections of Algebra and Analysis, like functional analysis (I recently learned what a <a href="Banach_Algebras.pdf">Banach Algebra</a> is) or algebraic topology-, coding, and music.  I have a few reasons for creating this website:
 <ul> 
-  <li><p class="p2"><span class="s1"> In order to familiarize myself with github </span></p></li>
+  <li><p class="p2"><span class="s1"> In order to familiarize myself with github and html </span></p></li>
   <li><p class="p2"><span class="s1"> To get better at computers</span></p></li>
 </ul>
 </span></p>
