--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!-- Note to self-->
 <head>
   <!-- Color, Fonts/links, Button-->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="new/style.css">
 </head>
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
 <body>
