--- a/new/notes.html
+++ b/new/notes.html
@@ -40,7 +40,7 @@
 <p class="p5"><span class="s2"><a href="file:///Users/adrianfry/H104.F13/OrderedSets.pdf">Notes</a></span></p>
 <br>
 <p class="p2"><span class="s1">Math 142: Elementary Algebraic Topology</span></p>
-<p class="p5"><span class="s2"><a href="../142%20(14).pdf" target="_blank">Notes</a></span></p>
+<p class="p5"><span class="s2"><a href="../142.pdf" target="_blank">Notes</a></span></p>
 </div>
 
 <br>
