--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
 <body>
-<div class="w3-container w3-hover-white" style="background-color: #f7f3dc;" >
+<div class="w3-container w3-hover-white w3-border-bottom" style="background-color: #f7f3dc;" >
 <!-- Title and header-->
 <h1 style="margin: 10.0px 0.0px 16.1px 0.0px; font: 27.0px Verdana; color: #032658"><span class="s1"><b>Adrian Fry</b></span></h1>
-<div class="control-container" style="margin: 0.0px 0.0px 0px -16.0px; display: flex; ">
+<div class="center control-container" style="margin: 0.0px 0.0px 0px -16.0px; display: flex; ">
   <a href="index.html" class="button button1" style="margin: 0; color: black;">Home</a>
   <a href="new/notes.html" class="button button1" style="margin: 0; color: black;">Coursework</a>
   <a href="new/projects.html" class="button button1" style="margin: 0; color: black;">Projects</a>
