--- a/new/projects.html
+++ b/new/projects.html
@@ -40,7 +40,7 @@
 
 <br>
 <div class="w3-container" style="margin: 0px 325px 0px 15px; background-color: white";>
-<p  class="p4"><span class="s1">Expository Programs</span></p>
+<p  class="p4"><span class="s1">Expository Notes</span></p>
 <br>
 <p  class="p2"><span class="s1">Inspired by the readings I did in Harmonic Analysis, I have been trying to figure out the Corona Problem.  Here are my notes on <a href="../Banach_Algebras.pdf">Banach Algebras</a>. </span></p>
 </div>
