--- a/new/experience.html
+++ b/new/experience.html
@@ -5,6 +5,7 @@
 <head>
   <!-- Color, Fonts/links, Button-->
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/x-icon" href="favicon.png">
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
