--- a/new/notes.html
+++ b/new/notes.html
@@ -5,7 +5,7 @@
 <head>
   <!-- Color, Fonts/links, Button-->
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/x-icon" href="favicon.png">
+  <link rel="icon" type="image/x-icon" href="../favicon.png">
 </head>
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
 
