--- a/new/notes.html
+++ b/new/notes.html
@@ -42,17 +42,19 @@
 <br>
 <p class="p2"><span class="s1">Math 142: Elementary Algebraic Topology</span></p>
 <p class="p5"><span class="s2"><a href="../142.pdf" target="_blank">Notes</a></span></p>
+<br>
+<p class="p2"><span class="s1">Math 113: Introduction to Abstract Algebra</span></p>
+<br>
+<p class="p2"><span class="s1">Math 110: Abstract Linear Algebra</span></p>
 </div>
 
 <br>
 <div class="w3-container" style="margin: 0px 325px 0px 15px; background-color: white">
 <p class="p4"><span class="s1">Sophomore Year</span></p>
 <br>
-<p class="p2"><span class="s1">Math 113: Introduction to Abstract Algebra</span></p>
-<p class="p5"><span class="s2"><a href="" target="_blank">In Progress</a></span></p>
+<p class="p2"><span class="s1">Math 202: Introduction to Analysis and Topology</span></p>
 <br>
-<p class="p2"><span class="s1">Math 110: Abstract Linear Algebra</span></p>
-<p class="p5"><span class="s2"><a href="" target="_blank">In Progress</a></span></p>
+<p class="p2"><span class="s1">Math 214: Differential Topology</span></p>
 </div>
 <br>
 
