--- a/new/math/12172025.html
+++ b/new/math/12172025.html
@@ -17,14 +17,14 @@
 <div class="w3-container w3-hover-white w3-border-bottom" style="background-color: #f7f3dc;" >
 <!-- Title and header-->
 <h1 style="margin: 10.0px 0.0px 16.1px 0.0px; font: 27.0px Verdana; color: #032658"><span class="s1"><b>Typing some math</b></span></h1>
-<div class="center control-container" style="display: flex; ">
-  <a href="../projects.html" class="button button1" style="margin: 0; color: black;">\(\leftarrow\)Back to projects</a>
+<div style="display: flex; ">
+  <a href="../projects.html" class="button button1" style="margin: 0; color: black;">\(\leftarrow\) Back to projects</a>
 </div>
 </div>
 
 <br>
 <div class="w3-container" style="margin: 0px 325px 0px 15px;">
-<p class="p2"><span class="s1">Math</span></p>
+<p class="h2"><span class="s1">Math</span></p>
 </div>
 
 <br>
@@ -36,6 +36,9 @@ This isn't a particularly difficult problem in the countable case, but Zorn's le
 Let \(V\) be the vector space, and let \(A\) be a spanning set.  We can put a partial ordering on \(P = \{S \in \mathcal{P}(A) : S \text{ spans } V\}\), where \(R < S\) if \(R \supset S\). 
 By Zorn's lemma, the \(P\) must have a maximal element since it is bounded by \(4\)
 
+The maximal element of \(P\) is the smallest subset of \(A\) which is spanning.  If it wasn't linearly independent then there would exist some \(w \in P\) for which there exists a collection 
+\(\{v_i\}_{i \in \mathbb{N}_{\leq k\}\) for some integer \(k\) which doesn't include \(w\) for which \[\sum_{i=1}^k a_iv_i = w.\]
+But then \(P - \{w\}\) is larger than the maximal element which is a contradiction.
 <br>
 I totally missed this problem on the test because I didn't think to order the sets by inclusion, and instead I tried to order the vectors in \(A\).
 </span></p>
