Update projects.html with new program details
Added additional participation details and notes on math topics.

--- a/new/projects.html
+++ b/new/projects.html
@@ -34,11 +34,22 @@
 <p  class="p2"><span class="s1">During Spring 2025 I participated in the <a href="https://wp.math.berkeley.edu/drp/">Berkeley Math Directed Reading Program</a>, reading about the Theory of Combinatorial Species under the mentorship of graduate student Saud Molaib.
   This program culminated in a final project for which I wrote an expository paper and made a presentation about the Theory of Combinatorial Species and a proof of the Lagrange Inversion Formula. </span></p>
 <p class="p2"><span class="s1">Here is my <a href="../UC_Berkeley_Beamer_Theme__1_ (4).pdf">slideshow</a> and <a href="../DRP_Combinatorial_Species (1).pdf">paper</a></span></p>
+<p  class="p2"><span class="s1">I did this program again during the fall where I read about differential topology.</span></p>
 <br>
 <p  class="p2"><span class="s1">I also participated in the <a href="https://mathalliancemrp.org/">Math Alliance Mentored Reading Program</a>, where I read some Harmonic Analysis from the textbook by Pereyra and Ward, under the mentorship of a postdoc at WUSTL. </span></p>
 </div>
 <br>
 
+
+<br>
+<div class="w3-container" style="margin: 0px 325px 0px 15px; background-color: white";>
+<p  class="p4"><span class="s1">Math problems and ideas</span></p>
+<br>
+<p  class="p2"><span class="s1"> 12/17/2025: <a href="/math/12172025.html">Hamel Bases</a>. </span></p>
+</div>
+<br>
+
+  
 <br>
 <div class="w3-container" style="margin: 0px 325px 0px 15px; background-color: white";>
 <p  class="p4"><span class="s1">Expository Notes</span></p>
