Fix link path for Hamel Bases in projects.html

--- a/new/projects.html
+++ b/new/projects.html
@@ -44,7 +44,7 @@
 <div class="w3-container" style="margin: 0px 325px 0px 15px; background-color: white";>
 <p  class="p4"><span class="s1">Math problems and ideas</span></p>
 <br>
-<p  class="p2"><span class="s1"> 12/17/2025: <a href="../math/12172025.html">Hamel Bases</a>. </span></p>
+<p  class="p2"><span class="s1"> 12/17/2025: <a href="math/12172025.html">Hamel Bases</a>. </span></p>
 </div>
 <br>
 
