--- a/new/projects.html
+++ b/new/projects.html
@@ -6,6 +6,9 @@
   <!-- Color, Fonts/links, Button-->
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/x-icon" href="../favicon.png">
+  <script id="MathJax-script" async
+          src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-mml-chtml.js">
+  </script>
 </head>
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
 
@@ -44,8 +47,9 @@
 <div class="w3-container" style="margin: 0px 325px 0px 15px; background-color: white";>
 <p  class="p4"><span class="s1">Math problems and ideas</span></p>
 <br>
-<p  class="p2"><span class="s1"> 12/17/2025: <a href="math/12172025.html">Hamel Bases</a>. </span></p>
+<p  class="p2"><span class="s1"> 12/17/2025: <a href="math/12172025.html" class="buton button1">Hamel Bases \(\rightarrow\)</a>. </span></p>
 </div>
+<p  class="p2"><span class="s1"> 12/17/2025: <a href="math/12172025.html" class="buton button1">Other \(\rightarrow\)</a>. </span></p>
 <br>
 
   
