--- a/new/projects.html
+++ b/new/projects.html
@@ -48,7 +48,7 @@
 <p  class="p4"><span class="s1">Math problems and ideas</span></p>
 <br>
 <p  class="p2"><span class="s1"> 12/17/2025: <a href="math/12172025.html" class="buton button1">Hamel Bases \(\rightarrow\)</a>. </span></p>
-<p  class="p2"><span class="s1"> 12/17/2025: <a href="math/1217.22025.html" class="buton button1">Other \(\rightarrow\)</a>. </span></p>
+<p  class="p2"><span class="s1"> 12/17/2025: <a href="math/1217.22025.html" class="buton button1">Computing de Rham Cohomology \(\rightarrow\)</a>. </span></p>
 </div>
 <br>
 
