Update text in 1217.22025.html for clarity
Clarify the explanation regarding de Rham cohomology.

--- a/new/math/1217.22025.html
+++ b/new/math/1217.22025.html
@@ -48,7 +48,7 @@ since it's dimension cannot be \(0\) or \(2\) be the information we know so far,
 </p>
 <p>
 The issue with this is that de Rham cohomology is more than just the dimension of the real vector space, and finding what \(\mathbb{R}^k\) each \(H^l_{dR}(M)\) is isomorphic to isn't 
-really all of what is needed 
+really doing the computation.
 </p>
 
 </span>
