--- a/index.html
+++ b/index.html
@@ -26,13 +26,18 @@
 <div class="w3-container" style="margin: 0px 325px 0px 15px; background-color: white">
 <p class="p4"><span class="s1">About Me</span></p>
 <br>
-<p class="p2"><span class="s1">Hello! I am a sophomore at UC Berkeley pursuing a BA in Pure Math.  I'm interested in math; at the moment I'm especially interested in interesections of Algebra and Analysis, like functional analysis (I recently learned what a <a href="Banach_Algebras.pdf">Banach Algebra</a> is) or algebraic topology-, but really my favorite part of math is solving problems.  Outisde of math, I enjoy learning new things -not only quantitative stuff; I also like history and politics- and in my spare time I like to read, play/listen to music (I play trombone and piano), exercise (right now, my favorite sports are table tennis and biking), and eat.  I have a few reasons for creating this website:
+<p class="p2"><span class="s1">Hello! I am a sophomore at UC Berkeley pursuing a BA in Pure Math.  I'm interested in math; at the moment I'm especially interested in 
+  Topology and Functional Analysis (I recently learned what a <a href="Banach_Algebras.pdf">Banach Algebra</a> is),
+  but really my favorite part of math is solving problems.  Outisde of math, I enjoy learning new things -not only quantitative stuff; I also like history and politics- 
+  and in my spare time I like to read, play/listen to music (I play trombone and piano), exercise (right now, my favorite sports are table tennis and biking), and eat.  I
+  have a few reasons for creating this website:
 <ul> 
   <li><p class="p2"><span class="s1"> In order to familiarize myself with github and html </span></p></li>
-  <li><p class="p2"><span class="s1"> To get better at computers</span></p></li>
+  <li><p class="p2"><span class="s1"> To get better at computers and LaTeX </span></p></li>
 </ul>
 </span></p>
-<p class="p2"><span class="s1">I plan to compile my class notes, projects, and other materials on this website. I also want this website to function somewhat like a resume, so I'll also add relevant information about myself, such as work experience.</span></p>
+<p class="p2"><span class="s1">I plan to compile my class notes, projects, and other materials on this website. I also want this website to function somewhat like a resume,
+  so I'll also add relevant information about myself, such as work experience.</span></p>
 </div>
 
 </body>
