Update course titles in notes.html

--- a/new/notes.html
+++ b/new/notes.html
@@ -51,9 +51,11 @@
 <div class="w3-container" style="margin: 0px 325px 0px 15px; background-color: white">
 <p class="p4"><span class="s1">Sophomore Year</span></p>
 <br>
-<p class="p2"><span class="s1">Math 202: Introduction to Analysis and Topology</span></p>
+<p class="p2"><span class="s1">Math 202: Introduction to Analysis and Topology 1 and 2</span></p>
 <br>
 <p class="p2"><span class="s1">Math 214: Differential Topology</span></p>
+<br>
+<p class="p2"><span class="s1">EECS 126: Probability Thoery</span></p>
 </div>
 <br>
 
