Add new math project entry for 12/18/2025

--- a/new/projects.html
+++ b/new/projects.html
@@ -49,6 +49,7 @@
 <br>
 <p  class="p2"><span class="s1"> 12/17/2025: <a href="math/12172025.html" class="buton button1">Hamel Bases \(\rightarrow\)</a>. </span></p>
 <p  class="p2"><span class="s1"> 12/17/2025: <a href="math/1217.22025.html" class="buton button1">Computing de Rham Cohomology \(\rightarrow\)</a>. </span></p>
+<p  class="p2"><span class="s1"> 12/18/2025: <a href="math/1217.22025.html" class="buton button1">Title \(\rightarrow\)</a>. </span></p>
 </div>
 <br>
 
